probably broke stuff

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p class="they-textbox-content js-they-textbox-content"></p>
         </div>
 
-        <div class="textbox-container">
+        <div class="textbox-container js-textbox-container-you">
             <div class="textbox-label label-left">
                 <p>Player 1</p>
             </div>
