add a response capability

--- a/index.html
+++ b/index.html
@@ -78,27 +78,27 @@
 
 
             <div class="you-textbox">
-                <div style="display:none;" class="you-answer-textbox">
+                <div style="display:none;" class="you-answer-textbox js-you-answer-txt">
                     <div class="truth-container">
-                        <div class="text-btn btn-truth">
-                            <span>text truth</span>
+                        <div name="0" class="text-btn js-answer-btn js-answer-container-0">
+                            <span class="js-answer-0"></span>
                         </div>
-                        <div class="text-btn btn-truth">
-                            <span>text truth</span>
+                        <div name="1" class="text-btn js-answer-btn js-answer-container-1">
+                            <span class="js-answer-1"></span>
                         </div>
                     </div>
                     <div class="lies-container">
-                        <div class="text-btn btn-lie">
-                            <span>text lie</span>
+                        <div name="2" class="text-btn js-answer-btn js-answer-container-2">
+                            <span class="js-answer-2"></span>
                         </div>
-                        <div class="text-btn btn-lie">
-                            <span>text lie here</span>
+                        <div name="3" class="text-btn js-answer-btn js-answer-container-3">
+                            <span class="js-answer-3"></span>
                         </div>
                     </div>
 
                 </div>
 
-                <div class="you-ask-textbox">
+                <div class="you-ask-textbox js-you-ask-txt">
                     <div class="text-message-prompt">
                         <p>What will you ask Jen about?</p>
                     </div>
