score bar changes

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
             <div class="clearfix">
                 <img class="progress-icon" src="img/heart.png">
                 <div class="progress-bar pink stripes">
-                    <span style="width: 40%"></span>
+                    <span class="js-attraction-bar" style="width: 40%"></span>
                 </div>
             </div>
 
             <div class="clearfix">
                 <img class="progress-icon" src="img/link.png">
                 <div class="progress-bar blue stripes">
-                    <span style="width: 40%"></span>
+                    <span class="js-trust-bar" style="width: 40%"></span>
                 </div>
             </div>
         </div>
