add a number button click event

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 
                 <div style="display: none;" class="number-ask-textbox js-ask-number-text">
-                    <div class="number-btn">
+                    <div class="number-btn js-number-btn">
                         <p>Ask for Susan's Number</p>
                     </div>
                 </div>
