have an end state where the date decides whether to give you their number

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
             <div class="textbox-label label-left">
                 <p>Susan</p>
             </div>
-            <p class="they-textbox-content js-they-textbox-content"></p>
+            <p class="they-textbox-content js-they-textbox-content">
+
+            </p>
+            <img class="js-loading-question" style="margin: 0 32%; display: none;" src="img/heart.gif">
         </div>
 
         <div class="textbox-container js-textbox-container-you">
