--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                 <div class="you-ask-textbox js-you-ask-txt">
                     <div class="text-message-prompt">
-                        <p>What will you ask Jen about?</p>
+                        <p>What will you ask Susan about?</p>
                     </div>
                     <div class="topics-container">
                         <div name="0" class="text-btn btn-truth js-topic-btn">
