--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Dexter Strikes Back</title>
+        <title>forestfire.biz</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -20,122 +20,127 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div style="display:none;" class="overlay js-cover">
-        </div>
-        <div style="display:none;" class="dating-profile js-dating-profile">
-            <div class="top-bar">
-                <div class="x-btn-close js-x-btn">
+
+        <div>
+
+            <div style="display:none;" class="overlay js-cover">
+            </div>
+            <div style="display:none;" class="dating-profile js-dating-profile">
+                <div class="top-bar">
+                    <div class="x-btn-close js-x-btn">
+                    </div>
+                </div>
+
+                <h2>forestfire.biz</h2>
+                <div class="dating-content">
+                    <div class="clearfix">
+                        <div class="user-content">
+                            <div class="user-picture">
+                                <img src="img/profile-pics/jen-01.png">
+                            </div>
+                            <div class="user-descr">
+                                <h3>Susan</h3>
+                                <p>I am open minded, good looking, white female looking for a company. You should be an educated professional. I live by myself, I pay my own rent. I am a attractive & comedic person.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="start-btn js-start-btn">
+                        <p>Start Date</p>
+                    </div>
                 </div>
             </div>
 
-            <h2>forestfire.biz</h2>
-            <div class="dating-content">
+            <div class="progress-bar-container">
                 <div class="clearfix">
-                    <div class="user-content">
-                        <div class="user-picture">
-                            <img src="img/profile-pics/jen-01.png">
-                        </div>
-                        <div class="user-descr">
-                            <h3>Susan</h3>
-                            <p>I am open minded, good looking, white female looking for a company. You should be an educated professional. I live by myself, I pay my own rent. I am a attractive & comedic person.</p>
-                        </div>
+                    <img class="progress-icon" src="img/heart.png">
+                    <div class="progress-bar pink stripes">
+                        <span class="js-attraction-bar" style="width: 40%"></span>
                     </div>
                 </div>
-                <div class="start-btn js-start-btn">
-                    <p>Start Date</p>
+
+                <div class="clearfix">
+                    <img class="progress-icon" src="img/link.png">
+                    <div class="progress-bar blue stripes">
+                        <span class="js-trust-bar" style="width: 40%"></span>
+                    </div>
                 </div>
             </div>
+
+            <div style="display:none;" class="js-they-textbox they-textbox">
+                <div class="textbox-label label-left">
+                    <p>Susan</p>
+                </div>
+                <p class="they-textbox-content js-they-textbox-content">
+
+                </p>
+                <img class="js-loading-question" style="margin: 0 32%; display: none;" src="img/heart.gif">
+            </div>
+
+            <div class="textbox-container js-textbox-container-you">
+                <div class="textbox-label label-left">
+                    <p>Player 1</p>
+                </div>
+
+
+
+                <div class="you-textbox">
+                    <div style="display:none;" class="you-answer-textbox js-you-answer-txt">
+                        <div class="truth-container">
+                            <div name="0" class="text-btn js-answer-btn js-answer-container-0">
+                                <span class="js-answer-0"></span>
+                            </div>
+                            <div name="1" class="text-btn js-answer-btn js-answer-container-1">
+                                <span class="js-answer-1"></span>
+                            </div>
+                        </div>
+                        <div class="lies-container">
+                            <div name="2" class="text-btn js-answer-btn js-answer-container-2">
+                                <span class="js-answer-2"></span>
+                            </div>
+                            <div name="3" class="text-btn js-answer-btn js-answer-container-3">
+                                <span class="js-answer-3"></span>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="you-ask-textbox js-you-ask-txt">
+                        <div class="text-message-prompt">
+                            <p>What will you ask Jen about?</p>
+                        </div>
+                        <div class="topics-container">
+                            <div name="0" class="text-btn btn-truth js-topic-btn">
+                                <span class="js-topic-0"></span>
+                            </div>
+                            <div name="1" class="text-btn btn-truth js-topic-btn">
+                                <span class="js-topic-1"></span>
+                            </div>
+                            <div name="2" class="text-btn btn-truth js-topic-btn">
+                                <span class="js-topic-2"></span>
+                            </div>
+                            <div name="3" class="text-btn btn-truth js-topic-btn">
+                                <span class="js-topic-3"></span>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+
+                    <div style="display: none;" class="number-ask-textbox js-ask-number-text">
+                        <div class="number-btn js-number-btn">
+                            <p>Ask for Susan's Number</p>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+
+            <img class="person" src="img/jenn-photos/neutral-2.jpg">
         </div>
 
-        <div class="progress-bar-container">
-            <div class="clearfix">
-                <img class="progress-icon" src="img/heart.png">
-                <div class="progress-bar pink stripes">
-                    <span class="js-attraction-bar" style="width: 40%"></span>
-                </div>
-            </div>
-
-            <div class="clearfix">
-                <img class="progress-icon" src="img/link.png">
-                <div class="progress-bar blue stripes">
-                    <span class="js-trust-bar" style="width: 40%"></span>
-                </div>
-            </div>
-        </div>
-
-        <div style="display:none;" class="js-they-textbox they-textbox">
-            <div class="textbox-label label-left">
-                <p>Susan</p>
-            </div>
-            <p class="they-textbox-content js-they-textbox-content">
-
-            </p>
-            <img class="js-loading-question" style="margin: 0 32%; display: none;" src="img/heart.gif">
-        </div>
-
-        <div class="textbox-container js-textbox-container-you">
-            <div class="textbox-label label-left">
-                <p>Player 1</p>
-            </div>
-
-
-
-            <div class="you-textbox">
-                <div style="display:none;" class="you-answer-textbox js-you-answer-txt">
-                    <div class="truth-container">
-                        <div name="0" class="text-btn js-answer-btn js-answer-container-0">
-                            <span class="js-answer-0"></span>
-                        </div>
-                        <div name="1" class="text-btn js-answer-btn js-answer-container-1">
-                            <span class="js-answer-1"></span>
-                        </div>
-                    </div>
-                    <div class="lies-container">
-                        <div name="2" class="text-btn js-answer-btn js-answer-container-2">
-                            <span class="js-answer-2"></span>
-                        </div>
-                        <div name="3" class="text-btn js-answer-btn js-answer-container-3">
-                            <span class="js-answer-3"></span>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="you-ask-textbox js-you-ask-txt">
-                    <div class="text-message-prompt">
-                        <p>What will you ask Jen about?</p>
-                    </div>
-                    <div class="topics-container">
-                        <div name="0" class="text-btn btn-truth js-topic-btn">
-                            <span class="js-topic-0"></span>
-                        </div>
-                        <div name="1" class="text-btn btn-truth js-topic-btn">
-                            <span class="js-topic-1"></span>
-                        </div>
-                        <div name="2" class="text-btn btn-truth js-topic-btn">
-                            <span class="js-topic-2"></span>
-                        </div>
-                        <div name="3" class="text-btn btn-truth js-topic-btn">
-                            <span class="js-topic-3"></span>
-                        </div>
-                    </div>
-
-
-                </div>
-
-
-                <div style="display: none;" class="number-ask-textbox js-ask-number-text">
-                    <div class="number-btn js-number-btn">
-                        <p>Ask for Susan's Number</p>
-                    </div>
-                </div>
-
-
-
-            </div>
-        </div>
-
-        <img class="person" src="img/jenn-photos/neutral-2.jpg">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
