go to next date option

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
                     <div style="display: none;" class="number-ask-textbox js-ask-number-text">
                         <div class="number-btn js-number-btn">
-                            <p>Ask for Susan's Number</p>
+                            <p><span class="js-change-end">Ask for Susan's Number</span></p>
                         </div>
                     </div>
 
